[package]
name = "reth-pure-tx-pool"
version = "0.1.0"
edition = "2024"

[dependencies]
reth-ethereum = { git = "https://github.com/paradigmxyz/reth.git", features = ["full", "test-utils"] }
eyre = "0.6"
alloy-consensus = { version = "1.0.23", default-features = false }
tokio = { version = "1.44.2", default-features = false }
crossbeam-utils = "0.8"
jsonrpsee = "0.25.1"
thousands = "0.2.0"
rlimit = "0.10.2"
rand = "0.8"

[profile.release]
debug = true

[profile.maxperf]
inherits = "release"
debug = false
strip = "symbols"
panic = "abort"
lto = "fat"
codegen-units = 1