[package]
name = "reth-pure-tx-pool"
version = "0.1.0"
edition = "2024"

[dependencies]
reth-ethereum = { git = "https://github.com/0xKitsune/reth.git", features = ["full", "test-utils", "cli"], rev = "b7a3f06e699aeec46a5df2cfbe1daf710f72ca68" }
reth-db-common = { git = "https://github.com/0xKitsune/reth.git", rev = "b7a3f06e699aeec46a5df2cfbe1daf710f72ca68" }
eyre = "0.6"
alloy-consensus = { version = "1.0.23", default-features = false }
tokio = { version = "1.44.2", default-features = false }
crossbeam-utils = "0.8"
jsonrpsee = "0.25.1"
thousands = "0.2.0"
rlimit = "0.10.2"
rand = "0.8"
hashbrown = "0.15.4"
parking_lot = "0.12.1"
dashmap = "6.1"
clap = { version = "4.5", features = ["derive"] }
tikv-jemallocator = "0.6"

[profile.release]
debug = true

[profile.maxperf]
inherits = "release"
debug = false
strip = "symbols"
panic = "abort"
lto = "fat"
codegen-units = 1
